<resources>
    <string name="app_name">LoadApp</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_loadapp_description">The Project 3 repository is downloaded</string>
    <string name="notification_glide_description">The Glide repository is downloaded</string>
    <string name="notification_retrofit_description">The Retrofit repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Download</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_button_description">Glide - Image Loading Library by BumpTech</string>
    <string name="loadapp_button_description">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_button_description">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="no_option_selected_toast_message">Please choose one option above</string>

    <string name="touch_here">Touch here to view the download status</string>
    <string name="file_name">File name:</string>
    <string name="status">Status:</string>
</resources>
